# CppPlayground

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
ModernCppQTApp/: CMakeLists.txt  Main.qml  MetalPanel.qml  VulkanPanel.qml  resources.qrc
ModernCppQTApp/src/: MyVulkanItem.h  SimpleRenderer.cpp  SimpleRenderer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  periodictablewindow.cpp  periodictablewindow.h  periodictablewindow.ui
ModernCppQTApp/src/MacOS/: ElementVisualizer.cpp  ElementVisualizer.h  MetalCubeNode.cpp  MetalCubeNode.h  MetalItem.cpp  MetalItem.h  MetalNodeItem.cpp  MetalNodeItem.h  MetalRenderNode.cpp  MetalRenderNode.h  MetalSphereItem.cpp  MetalSphereItem.h  MetalSphereNode.cpp  MetalSphereNode.h
ModernCppQTApp/src/Visualizer/: MyQuickItem.cpp  MyQuickItem.h
PlaygroundLib/: CMakeLists.txt
PlaygroundLib/Common/: Common.hpp  DemoBase.cpp  DemoBase.hpp  DemoExample.hpp  MySharedPtr.hpp  MyUniquePtr.hpp
PlaygroundLib/Demos/: AllocateShared.hpp  AssigmentAndInitialization.hpp  AutoDeduction.hpp  CompilationProcess.hpp  ConstExpreession.hpp  ConstIterators.hpp  ConstMutable.hpp  Declaretype.hpp  DeductingTypes.hpp  DeepShallowCopy.hpp  EmptyDemo.hpp  ExceptionAndStack.hpp  ForwardValue.hpp  HowToWeakPtr.hpp  MoreAboutSharedPtr.hpp  OutOfRangeDemo.hpp  OverloadingAndOverriding.hpp  PtrDemo.hpp  ReferencePolymorphism.hpp  RuleOfThree.hpp  SOLID.hpp  StaticMemoryAllocation.hpp  ThrowAndNoExcept.hpp  UndesiredTypes.hpp  UniquePtrFactory.hpp  UniversalRefVsRValueRef.hpp  VirtualDestructor.hpp  WeakPtrVsSharedPtr.hpp
PlaygroundLib/Demos/C++Grebosz/: HelloWorld2025.hpp  TypeLimits.hpp  Zadanko12_5_30.cpp  Zadanko12_5_30.hpp  Zadanko13_9_10.cpp  Zadanko13_9_10.hpp  Zadanko14_7_16.cpp  Zadanko14_7_16.hpp  Zadanko4_16III.hpp  Zadanko8_28.cpp  Zadanko8_28.hpp
PlaygroundLib/Demos/CPP11/: FutureObj.hpp
PlaygroundLib/Demos/CPP17/: AnyDemo.hpp  CharConvDemo.hpp  ExecutionDemo.hpp  FileSystemDemo.hpp  MemoryResourceDemo.hpp  OptionalDemo.hpp  StringViewDemo.hpp  VariantDemo.hpp
PlaygroundLib/Demos/CPP20/: BitDemo.hpp  CompareDemo.hpp  CorutineDemo.hpp  PredicateDemo.hpp  SemaphoreDemo.hpp
PlaygroundLib/Demos/NeuralNetwork/: NeuralNetwork.hpp  NeuralNetworkDemo.hpp
PlaygroundLib/Demos/Patterns/: Pimpl.hpp
PlaygroundLib/Demos/Patterns/Adapter/: AdapterDemo.hpp  ClientInterface.hpp  MyOldClass.hpp  OldClassAfapter.hpp
PlaygroundLib/Demos/Patterns/Builder/: BuilderDemo.hpp  PcBuilder.cpp  PcBuilder.hpp  PersonalComputer.hpp
PlaygroundLib/Demos/Patterns/Pimpl/: LargeClass.cpp  LargeClass.hpp  LargeClassImpl.cpp
PlaygroundLib/Demos/Patterns/Singleton/: SingletonDemo.hpp
PlaygroundLib/DemosFactory/: CommonDemos.h  DemoFactory.hpp
PlaygroundLib/Mendelejew/: Element.hpp  ElementReader.cpp  ElementReader.hpp  Table.hpp
PlaygroundLib/QuestionTasks/: LongestCharSequence.hpp  LongestPalindrom.hpp  LongestUniqueSubstring.hpp  StringToInt.hpp
VulkanFun/: CMakeLists.txt  main.cpp
VulkanFun/src/: Vertex.hpp  VulkanFunApp.cpp  VulkanFunApp.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanUtils.cpp  VulkanUtils.hpp  VulkanValidation.hpp  VulkanWindow.cpp  VulkanWindow.hpp  temporary.hpp
VulkanFun/src/MyPhysics/: PhysicsTimer.cpp
VulkanFun/src/Vulkan/: VulkanShader.hpp  VulkanUtis.hpp
VulkanSrc/Vulkan/: VulkanApp.cpp  VulkanApp.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanUtils.cpp  VulkanUtils.hpp  VulkanValidation.hpp
grpcDemo/: CMakeLists.txt
grpcDemo/grpcClient/: CMakeLists.txt  client.cpp
grpcDemo/grpcServer/: CMakeLists.txt  server.cpp
patches/: tinyxml.patch
src/: AllocateShared.hpp  AssigmentAndInitialization.hpp  AutoDeduction.hpp  Common.hpp  CompilationProcess.hpp  ConstExpreession.hpp  ConstIterators.hpp  ConstMutable.hpp  Declaretype.hpp  DeductingTypes.hpp  DeepShallowCopy.hpp  ExceptionAndStack.hpp  HowToWeakPtr.hpp  MoreAboutSharedPtr.hpp  MySharedPtr.hpp  MyUniquePtr.hpp  OverloadingAndOverriding.hpp  PtrDemo.hpp  ReferencePolymorphism.hpp  RuleOfThree.hpp  SOLID.hpp  StaticMemoryAllocation.hpp  ThrowAndNoExcept.hpp  UndesiredTypes.hpp  UniquePtrFactory.hpp  VirtualDestructor.hpp  WeakPtrVsSharedPtr.hpp
src/Common/: Common.hpp  DemoBase.hpp  DemoExample.hpp  DemoFactory.hpp  MySharedPtr.hpp  MyUniquePtr.hpp
src/Demos/: AllocateShared.hpp  AssigmentAndInitialization.hpp  AutoDeduction.hpp  CompilationProcess.hpp  ConstExpreession.hpp  ConstIterators.hpp  ConstMutable.hpp  Declaretype.hpp  DeductingTypes.hpp  DeepShallowCopy.hpp  EmptyDemo.hpp  ExceptionAndStack.hpp  ForwardValue.hpp  HowToWeakPtr.hpp  MoreAboutSharedPtr.hpp  OverloadingAndOverriding.hpp  PtrDemo.hpp  ReferencePolymorphism.hpp  RuleOfThree.hpp  SOLID.hpp  StaticMemoryAllocation.hpp  ThrowAndNoExcept.hpp  UndesiredTypes.hpp  UniquePtrFactory.hpp  UniversalRefVsRValueRef.hpp  VirtualDestructor.hpp  WeakPtrVsSharedPtr.hpp
src/Demos/CPP17/: AnyDemo.hpp  CharConvDemo.hpp  ExecutionDemo.hpp  FileSystemDemo.hpp  MemoryResourceDemo.hpp  OptionalDemo.hpp  StringViewDemo.hpp  VariantDemo.hpp
src/Demos/NeuralNetwork/: NeuralNetwork.hpp  NeuralNetworkDemo.hpp
src/Demos/Patterns/: Pimpl.hpp
src/Demos/Patterns/Adapter/: AdapterDemo.hpp
src/Demos/Patterns/Builder/: PersonalComputer.hpp
src/Demos/Patterns/Pimpl/: LargeClassImpl.hpp
src/Demos/Patterns/Singleton/: Singleton.hpp  SingletonDemo.hpp
src/Patterns/: Pimpl.hpp
tests/: CMakeLists.txt  main_test.cpp
